--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
         <form>
             <ul class="js-toDoList">
             </ul>
-
+            <span class="js-weather"></span>
         </form>
         <script src="clock.js"></script>
         <script src="greeting.js"></script>
