--- a/index.html
+++ b/index.html
@@ -1,32 +1,44 @@
 <!DOCTYPE html>
-<html>
-    <head>
-        <meta charset="utf-8">
-        <title>Something</title>
-        <link rel="stylesheet" href="index.css" />
-    </head>
-    <body>
-        <div class="js-clock">
-            <h1 class="js-title"></h1>
-        </div>
-        <form class="js-form form">
-            <input type="text" placeholder="What is your name?" />
+<html lang="en">
 
-        </form>
-        <h4 class="js-greetings greetings"></h4>
-        <form class="js-toDoForm">
-            <input type="text" placeholder="Write a to do"/>
-        </form>
-        <form>
-            <ul class="js-toDoList">
-            </ul>
-            <span class="js-weather"></span>
-        </form>
-        <script src="clock.js"></script>
-        <script src="greeting.js"></script>
-        <script src="todo.js"></script>
-        <script src="bg.js"></script>
-        <script src="weather.js"></script>
-    </body>
+<head>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta http-equiv="X-UA-Compatible" content="ie=edge">
+    <meta name="author" content="Nicolás Serrano Arévalo" />
+    <title>Momonton</title>
+    <link rel="stylesheet" href="css/styles.css">
+</head>
+
+<body>
+
+    <section class="center">
+        <div class="js-clock clock">
+            <h3 class="clock__text">00:00</h3>
+        </div>
+        <div class="js-name name"></div>
+        <div>
+            <form class="js-to-do to-do">
+                <input class="js-add-to-do to-do__add-to-do" placeholder="Write a To Do here" type="text" />
+            </form>
+            <ul class="js-list list"></ul>
+        </div>
+    </section>
+
+    <div class="js-location location">
+        <span class="location__text"></span>
+    </div>
+
+    <div class="js-weather weather">
+        <span class="weather__text"></span>
+    </div>
+
+    <script src="js/bg.js"></script>
+    <script src="js/clock.js"></script>
+    <script src="js/weather.js"></script>
+    <script src="js/greeting.js"></script>
+    <script src="js/toDo.js"></script>
+
+</body>
 
 </html>
