implementing ability to weather display and change image

--- a/index.html
+++ b/index.html
@@ -5,8 +5,8 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
-    <meta name="author" content="Nicolás Serrano Arévalo" />
-    <title>Momonton</title>
+    <meta name="author" content="Noah" />
+    <title>New Tap</title>
     <link rel="stylesheet" href="css/styles.css">
 </head>
 
@@ -16,7 +16,10 @@
         <div class="js-clock clock">
             <h3 class="clock__text">00:00</h3>
         </div>
-        <div class="js-name name"></div>
+        <div class="greeting__greet-and-name">
+            <span class="greet" id="js-greet-text"></span>
+            <span class="name" id="js-name"></span>
+          </div>
         <div>
             <form class="js-to-do to-do">
                 <input class="js-add-to-do to-do__add-to-do" placeholder="Write a To Do here" type="text" />
