--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <meta name="author" content="Noah" />
-    <title>New Tap</title>
+    <title>New Tab</title>
     <link rel="stylesheet" href="css/styles.css">
 </head>
 
